<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantallainicio"
    tools:context="sofianvone.sofbuq.appbuena.PulseStart">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="306dp"
        android:layout_height="117dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:contentDescription="@string/imagenIR"
        android:onClick="irJuego"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animaboton" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="244dp"
        android:layout_height="222dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/startBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/viruspri" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="306dp"
        android:layout_height="117dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="441dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:contentDescription="@string/instrucciones"
        android:onClick="irInstrucciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animabotonhow"
        tools:ignore="OnClick" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="108dp"
        android:text="@string/derechos"
        android:textColor="#F1B409"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.333" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="413dp"
        android:layout_height="92dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-6583708177225831/2316552593"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"></com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="301dp"
        android:layout_marginRight="301dp"
        android:onClick="politicas"
        android:text=" privacy policies"
        android:textColor="#F1B409"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>